<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:id="@+id/fragment"
            android:layout_above="@+id/radioGroup">

        </FrameLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_home"
                style="@style/MTabStyle"
                android:checked="true"
                android:text="@string/basics_wc" />

            <RadioButton
                android:id="@+id/radio_sort"
                style="@style/MTabStyle"
                android:text="@string/basics_investigate" />

            <RadioButton
                android:id="@+id/radio_information"
                style="@style/MTabStyle"
                android:text="@string/basics_alter" />

        </RadioGroup>

</RelativeLayout>
